--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     </head>
     <body>
         <h1>This is my GitHub Pages Website</h1>
+        <img src="12.jpg" alt="12" width="550">
+        <a href="https://poradnyk.com.ua">Click</a>
     </body>
 </html>
